--- a/style/travel.css
+++ b/style/travel.css
@@ -121,15 +121,74 @@ margin: 15px;
    height: 100%;
 }
 
+.facts_card{
+   justify-content: space-around;
+   width: 700px;
+height: 284px;
+padding: 50px 450px;
+color: #131318;
+text-align: center;
+font-size: 2.4rem;
+font-weight: 800;
+align-items: center;
+}
+.world{
+width: 500px;
+   height: 284px;
+   flex-shrink: 0;;
+border-radius: 16px;
+border: 1px solid rgba(41, 206, 246, 0.20);
+background: rgba(41, 206, 246, 0.05);
+margin: 0 auto;
+}
+.best{
+   width: 573px;
+   height: 284px;
+   border-radius: 16px;
+border: 1px solid rgba(251, 181, 99, 0.20);
+background: rgba(251, 181, 99, 0.05);
+   margin: 0 auto;
+}
+
+
+.facts_card{
+   display: flex;
+   gap: 50px;
+   text-align:left;
+
+}
+footer{
+   align-items: center;
+   padding: ;
+   margin: 0 auto;
+   text-align: center;
+
+}
+footer hr{
+   width: 872px;
+height: 1px;
+}
+footer .logo{
+   padding: 0 600px;
+}
+
 /* main section*/
 
 
 /* responsive*/
 @media screen and (max-width:576px){
    .container_2,
-   .container,.destination{
+   .container,.destination
+   ,.travel_logo,.footer{
      flex-direction: column;
 
+   }
+
+   .facts_card{
+      flex-direction: column;
+   }
+   footer{
+      justify-content: center;
    }
    .container_2 img{
     height: 540px: ;
