--- a/style/travel.css
+++ b/style/travel.css
@@ -50,17 +50,66 @@ font-weight: 800;
  }
  /*banner start*/
 .banner{
-   padding: 106px 240px;
-   position: relative;
+   align-items: center;
+   width: 1170px;
+height: 500px;
+flex-shrink: 0;
+padding: 200px 200px;
 }
-.banner,.text{
-   top:0;
- border-radius: 16px;
- background: linear-gradient()
- padding:10px;
+.banner img{
+   max-width: 100%;
+   height: auto;
 }
+.text{
+   position: absolute;
+   bottom:5%;
+   left: 14%;
+   border-radius: 16px;
+   background: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%);
+  margin: 0 auto;
+  padding: 39px 100px;
+}
+.text h1 {
+   color: #FFF;
+font-family: Mulish;
+font-size: 64px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.text p{
+   color: #FFF;
+text-align: center;
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; /* 162.5% */
+}
+.input{
+   display: flex;
+   display: inline-flex;
+   padding: 16px;
+   align-items: flex-start;
+   gap: 24px;
+   border-radius: 8px;
+background: rgba(255, 255, 255, 0.30);
 
-
+}
+.text input{
+   width: 174px;
+height: 52px;
+flex-shrink: 0;
+gap: 5px;
+}
+.btn-find{
+   width: 174px;
+height: 52px;
+flex-shrink: 0;
+border-radius: 8px;
+background: #FF5400;
+color: #FFF;
+}
 /*our popular tours*/
 .container_2{
    display: flex;
@@ -173,7 +222,75 @@ footer .logo{
 }
 
 /* main section*/
+.news{
+   display: flex;
+   padding: 0 200px;
+   gap: 24px;
 
+}
+.info{
+   width: 474px;
+   height: 422px;
+   border-radius: 16px;
+border: 1px solid #FF5400;
+text-align: center;
+
+}
+.save_up{
+   width: 324px;
+height: 120px;
+transform: rotate(-19.628deg);
+border-radius: 16px;
+background: #FF5400;
+color: #FFF;
+position: relative;
+bottom: 200px;
+left: 300px;
+}
+.save_up h3{
+   color: #FFF;
+text-align: center;
+font-size: 24px;
+font-weight: 400;
+}
+.save_up h2{
+   color: #FFF;
+font-size: 32px;
+font-weight: 800;
+}
+.info h2{
+   color: #131318;
+   font-size: 24px;
+   font-weight: 800;
+}
+.info p{
+   width: 350px;
+   color: #5A5A5D;
+font-size: 16px;
+font-weight: 400;
+line-height: 26px; /* 162.5% */
+}
+.info input{
+   display: flex;
+   margin: 0 auto;
+   width: 393px;
+height: 52px;
+flex-shrink: 0;
+ border-radius: 8px;
+background: rgba(19, 19, 24, 0.05);
+border: none;
+
+}
+.btn-secondary{
+   
+   color: #FFF;
+   border-radius: 8px;
+background: #FF5400;
+   width: 393px;
+height: 52px;
+flex-shrink: 0;
+border: none;
+}
 
 /* responsive*/
 @media screen and (max-width:576px){
@@ -184,11 +301,17 @@ footer .logo{
 
    }
 
+ .input{
+   flex-direction: column;
+ }
    .facts_card{
       flex-direction: column;
    }
    footer{
       justify-content: center;
+   }
+   .banner,.news{
+      flex-direction: column;
    }
    .container_2 img{
     height: 540px: ;
